--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-shopping-cart-formik",
   "version": "1.0.0",
-  "description": "Assembler School: React Shopping Cart Project",
+  "description": "Assembler School: React Shopping Cart Formik",
   "keywords": [
     "react-shopping-cart-formik",
     "assembler school"
